# glucose-trend-alert-system

./: .README.md.un~  .gitignore  .requirements.txt.un~  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
dashboard/: README.md  app.py
data/: README.md
data/processed/: classified_cgm_24_hour_baseline_scenarios.csv  processed_cgm_pipeline_output.csv  trend_cgm_24_hour_baseline_scenarios.csv
data/raw/: synthetic_cgm_24_hour_baseline_scenarios.csv  synthetic_cgm_7_day_baseline_scenarios.csv
data/reports/: alert_summary.csv  risk_zone_summary_24_hour.csv  trend_summary.csv
docs/: example_output.md  regulatory_disclaimer.md  requirements.md  risk_management.md  software_design_document.md  traceability_matrix.md  validation_plan.md
examples/: .classify_sample_data.py.un~  README.md  classify_sample_data.py  classify_sample_data.py~  detect_trends_sample_data.py  generate_alerts_sample_data.py  run_pipeline.py
src/glucose_alert_system/: README.md  alert_engine.py  data_generator.py  pipeline.py  report_exporter.py  risk_classifier.py  trend_detector.py
tests/: README.md  test_alert_engine.py  test_pipeline.py  test_risk_classifier.py  test_trend_detector.py
