[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glucose-trend-alert-system"
version = "0.1.0"
description = "Synthetic CGM trend detection and alert system for healthcare technology portfolio development."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
